// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AddPodcastForm > matches the snapshot 1`] = `
"<form novalidate="">
  <div class="formFields">
    <div class="column inputField"><label class="mBXS sentenceCase smallFont label" for="feedUrl">feed Url <span class="required">*</span></label><input id="feedUrl" autocomplete="off" class="input" placeholder="Enter RSS feed url" required="" type="text">
      <!--v-if-->
    </div>
  </div><button class="centerItems buttonLink submitButton formButton submitButton formButton" draggable="false" type="submit">
    <!--v-if--><span class="clamp text"> Add podcast </span>
  </button>
</form>"
`;

exports[`AddPodcastForm > when form is valid > matches the snapshot 1`] = `
"<form novalidate="">
  <div class="formFields">
    <div class="column inputField"><label class="mBXS sentenceCase smallFont label" for="feedUrl">feed Url <span class="required">*</span></label><input id="feedUrl" autocomplete="off" class="input" placeholder="Enter RSS feed url" required="" type="text">
      <!--v-if-->
    </div>
  </div><button class="centerItems buttonLink alignRight disabled submitButton formButton submitButton formButton" draggable="false" type="submit" disabled=""><span class="centerItems spinningLoader icon" aria-hidden="true" weight="regular"><phcirclenotch class="icon" size="24"></phcirclenotch><span class="visuallyHidden">Loading...</span></span><span class="clamp text"> Add podcast </span></button>
</form>"
`;
